# stardust

./: .gitignore  Cargo.toml  README.md
gamedata/models/: 16x16x16.sdvx  16x16x16.vox  3x3x3.sdvx  3x3x3.vox  8x8x8.sdvx  8x8x8.vox  cornell_box_sphere.sdvx  cornell_box_sphere.vox  monu10.sdvx
stardust/: Cargo.toml
stardust/src/: lib.rs
stardust/src/rendering/: mesh.rs  mod.rs  render_pass.rs  shader.rs
stardust_common/: Cargo.toml
stardust_common/src/: camera.rs  glsl.rs  lib.rs  main.rs  math.rs  mesh.rs  model.rs  object.rs  scene.rs  shape.rs  voxel.rs
stardust_demo/: Cargo.toml
stardust_demo/shaders/: vs.glsl
stardust_demo/src/: main.rs
stardust_ecs/: Cargo.toml
stardust_ecs/ecs_derive/: Cargo.toml
stardust_ecs/ecs_derive/src/: lib.rs
stardust_ecs/src/: fields.rs  lib.rs  model.rs  prelude.rs  transform.rs
stardust_engine/: Cargo.toml
stardust_engine/shaders/: fs.glsl  vs.glsl
stardust_engine/src/: console.rs  main.rs  renderer.rs  resource_manager.rs
stardust_engine/src/widgets/: console.rs  flamegraph.rs  fs_browser.rs  inspector.rs  mod.rs  model_selector.rs  perf_debug.rs  resource_inspector.rs  resource_loader.rs  scene_hierarchy.rs  vfs_browser.rs
stardust_engine/src/widgets/custom/: mod.rs  toggle_switch.rs
stardust_engine_lib/: Cargo.toml
stardust_engine_lib/shaders/: fs.glsl  vs.glsl
stardust_engine_lib/src/: lib.rs  main.rs
stardust_magica_voxel/: Cargo.toml
stardust_magica_voxel/src/: lib.rs
stardust_sdvx/: Cargo.toml  README.md
stardust_sdvx/src/: lib.rs
stardust_world/: Cargo.toml
stardust_world/shaders/: cs_alloc_bricks.glsl  cs_alloc_bricks_layers.glsl  cs_alloc_layers.glsl  cs_dealloc_bricks.glsl  cs_place_model.glsl  cs_process_voxel_queue.glsl  cs_stream_shader.glsl
stardust_world/src/: brick.rs  data.rs  layer0.rs  lib.rs  usage_flags.rs  voxel.rs
