[package]
name = "stardust_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.18", features = ["derive"] }

stardust_common = { path = "../stardust_common" }
stardust_world = { path = "../stardust_world" }
