[package]
name = "stardust_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
foxtail = { path = "../../foxtail/foxtail" }
egui = "0.19.0"

winit_input_helper = "0.13.0"
rand = "0.8.5"
puffin = "0.13.3"
puffin_egui = "0.17.0"

vfs = "0.9.0"

stardust_common = { path = "../stardust_common" }
stardust_world = { path = "../stardust_world" }
