[package]
name = "stardust_magica_voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
dot_vox = "5.1.0"
puffin = "0.13.3"
anyhow = "1.0.66"

stardust_common = { path = "../stardust_common" }
